logs/klue-client-server.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Flask-0.10.1.egg-info'...
Listing './lib/python3.5/site-packages/Jinja2-2.10.dist-info'...
Listing './lib/python3.5/site-packages/MarkupSafe-1.0.egg-info'...
Listing './lib/python3.5/site-packages/PyYAML-3.12.egg-info'...
Listing './lib/python3.5/site-packages/Werkzeug-0.14.1.dist-info'...
Listing './lib/python3.5/site-packages/bravado_core'...
Listing './lib/python3.5/site-packages/bravado_core-4.11.0.dist-info'...
Listing './lib/python3.5/site-packages/dateutil'...
Listing './lib/python3.5/site-packages/dateutil/tz'...
Listing './lib/python3.5/site-packages/dateutil/zoneinfo'...
Listing './lib/python3.5/site-packages/flask'...
Listing './lib/python3.5/site-packages/flask/ext'...
Listing './lib/python3.5/site-packages/flask/testsuite'...
Listing './lib/python3.5/site-packages/flask/testsuite/static'...
Listing './lib/python3.5/site-packages/flask/testsuite/templates'...
Listing './lib/python3.5/site-packages/flask/testsuite/templates/nested'...
Listing './lib/python3.5/site-packages/flask/testsuite/test_apps'...
Listing './lib/python3.5/site-packages/flask/testsuite/test_apps/blueprintapp'...
Listing './lib/python3.5/site-packages/flask/testsuite/test_apps/blueprintapp/apps'...
Listing './lib/python3.5/site-packages/flask/testsuite/test_apps/blueprintapp/apps/admin'...
Listing './lib/python3.5/site-packages/flask/testsuite/test_apps/blueprintapp/apps/admin/static'...
Listing './lib/python3.5/site-packages/flask/testsuite/test_apps/blueprintapp/apps/admin/templates'...
Listing './lib/python3.5/site-packages/flask/testsuite/test_apps/blueprintapp/apps/frontend'...
Listing './lib/python3.5/site-packages/flask/testsuite/test_apps/blueprintapp/apps/frontend/templates'...
Listing './lib/python3.5/site-packages/flask/testsuite/test_apps/config_package_app'...
Listing './lib/python3.5/site-packages/flask/testsuite/test_apps/flask_broken'...
Listing './lib/python3.5/site-packages/flask/testsuite/test_apps/flask_newext_package'...
Listing './lib/python3.5/site-packages/flask/testsuite/test_apps/flaskext'...
Listing './lib/python3.5/site-packages/flask/testsuite/test_apps/flaskext/oldext_package'...
Listing './lib/python3.5/site-packages/flask/testsuite/test_apps/lib'...
Listing './lib/python3.5/site-packages/flask/testsuite/test_apps/lib/python2.5'...
Listing './lib/python3.5/site-packages/flask/testsuite/test_apps/lib/python2.5/site-packages'...
Listing './lib/python3.5/site-packages/flask/testsuite/test_apps/lib/python2.5/site-packages/site_package'...
Listing './lib/python3.5/site-packages/flask/testsuite/test_apps/moduleapp'...
Listing './lib/python3.5/site-packages/flask/testsuite/test_apps/moduleapp/apps'...
Listing './lib/python3.5/site-packages/flask/testsuite/test_apps/moduleapp/apps/admin'...
Listing './lib/python3.5/site-packages/flask/testsuite/test_apps/moduleapp/apps/admin/static'...
Listing './lib/python3.5/site-packages/flask/testsuite/test_apps/moduleapp/apps/admin/templates'...
Listing './lib/python3.5/site-packages/flask/testsuite/test_apps/moduleapp/apps/frontend'...
Listing './lib/python3.5/site-packages/flask/testsuite/test_apps/moduleapp/apps/frontend/templates'...
Listing './lib/python3.5/site-packages/flask/testsuite/test_apps/path'...
Listing './lib/python3.5/site-packages/flask/testsuite/test_apps/path/installed_package'...
Listing './lib/python3.5/site-packages/flask/testsuite/test_apps/subdomaintestmodule'...
Listing './lib/python3.5/site-packages/flask/testsuite/test_apps/subdomaintestmodule/static'...
Listing './lib/python3.5/site-packages/itsdangerous-0.24.egg-info'...
Listing './lib/python3.5/site-packages/jinja2'...
Compiling './lib/python3.5/site-packages/jinja2/asyncfilters.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncfilters.py", line 24
    yield item
    ^
SyntaxError: 'yield' inside async function

Compiling './lib/python3.5/site-packages/jinja2/asyncsupport.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncsupport.py", line 35
    yield event
    ^
SyntaxError: 'yield' inside async function

Listing './lib/python3.5/site-packages/jsonref-0.1.egg-info'...
Listing './lib/python3.5/site-packages/jsonschema'...
Listing './lib/python3.5/site-packages/jsonschema/schemas'...
Listing './lib/python3.5/site-packages/jsonschema/tests'...
Listing './lib/python3.5/site-packages/jsonschema-2.6.0.dist-info'...
Listing './lib/python3.5/site-packages/klue'...
Listing './lib/python3.5/site-packages/klue/swagger'...
Listing './lib/python3.5/site-packages/klue_client_server-1.0.124.egg-info'...
Listing './lib/python3.5/site-packages/markupsafe'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/python_dateutil-2.6.1.dist-info'...
Listing './lib/python3.5/site-packages/pytz'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Africa'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America/Argentina'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America/Indiana'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America/Kentucky'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America/North_Dakota'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Antarctica'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Arctic'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Asia'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Atlantic'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Australia'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Brazil'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Canada'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Chile'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Etc'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Europe'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Indian'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Mexico'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Pacific'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/US'...
Listing './lib/python3.5/site-packages/pytz-2017.3.dist-info'...
Listing './lib/python3.5/site-packages/rfc3987-1.3.7.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/simplejson'...
Listing './lib/python3.5/site-packages/simplejson/tests'...
Listing './lib/python3.5/site-packages/simplejson-3.13.2.egg-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/strict_rfc3339-0.7.egg-info'...
Listing './lib/python3.5/site-packages/swagger_spec_validator'...
Listing './lib/python3.5/site-packages/swagger_spec_validator/schemas'...
Listing './lib/python3.5/site-packages/swagger_spec_validator/schemas/v1.2'...
Listing './lib/python3.5/site-packages/swagger_spec_validator/schemas/v2.0'...
Listing './lib/python3.5/site-packages/swagger_spec_validator-2.1.0.dist-info'...
Listing './lib/python3.5/site-packages/u_msgpack_python-2.4.1.dist-info'...
Listing './lib/python3.5/site-packages/webcolors-1.7.egg-info'...
Listing './lib/python3.5/site-packages/werkzeug'...
Listing './lib/python3.5/site-packages/werkzeug/contrib'...
Listing './lib/python3.5/site-packages/werkzeug/debug'...
Listing './lib/python3.5/site-packages/werkzeug/debug/shared'...
Listing './lib/python3.5/site-packages/yaml'...
Listing './share'...
Listing './share/python-wheels'...
